force-app/main/default/objects/vlocity_cmt__CalculationMatrixDimension__c/vlocity_cmt__CalculationMatrixDimension__c.object-meta.xml
<CustomObject>
    <description>Defines the input and output dimensions of a matrix.</description>
    <label>Vlocity Calculation Matrix Dimension</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Calculation Matrix Dimensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>