force-app/main/default/objects/vlocity_cmt__CalculationMatrixDimension__c/fields/vlocity_cmt__CalculationMatrixId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CalculationMatrixId__c</fullName>
    <label>Pricing Matrix</label>
    <referenceTo>vlocity_cmt__CalculationMatrix__c</referenceTo>
    <relationshipLabel>Vlocity Calculation Matrix Dimensions</relationshipLabel>
    <relationshipName>VlocityCalculationMatrixDimensions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>