force-app/main/default/objects/vlocity_cmt__CalculationMatrixDimension__c/fields/vlocity_cmt__DataType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DataType__c</fullName>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Number Range</fullName>
            </value>
            <value>
                <fullName>Text Range</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>