force-app/main/default/objects/vlocity_cmt__CalculationMatrixDimension__c/fields/vlocity_cmt__DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DisplayOrder__c</fullName>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>